src/objects/CventEvents__AttendeeTemp__c.object
<CustomObject>
    <fields>
        <fullName>OkayToEmail__c</fullName>
        <label>OkayToEmail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OkayToFax__c</fullName>
        <label>OkayToFax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OkayToMail__c</fullName>
        <label>OkayToMail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PARTITAIVA__c</fullName>
        <label>PARTITA IVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pleasereadandchoosethecorrectstate__c</fullName>
        <label>Please read and choose the correct state</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>I acknowledge that I DO accept reimbursement from Medicare, Medicaid, TriCare or any other governmental federal or state health care programs.</fullName>
                    <isActive>false</isActive>
                    <label>I acknowledge that I DO accept reimbursement from Medicare, Medicaid, TriCare or any other governmental federal or state health care programs.</label>
                </value>
                <value>
                    <fullName>I acknowledge that I DO accept reimbursement from Medicare, Medicaid, TriCare or any other governmental healthcare programs.</fullName>
                    <isActive>false</isActive>
                    <label>I acknowledge that I DO accept reimbursement from Medicare, Medicaid, TriCare or any other governmental healthcare programs.</label>
                </value>
                <value>
                    <fullName>I acknowledge that I DO NOT accept reimbursement from Medicare, Medicaid, Tricare or any other governmental federal or state health care programs, nor does any practice with which I am affiliated.</fullName>
                    <isActive>false</isActive>
                    <label>I acknowledge that I DO NOT accept reimbursement from Medicare, Medicaid, Tricare or any other governmental federal or state health care programs, nor does any practice with which I am affiliated.</label>
                </value>
                <value>
                    <fullName>I acknowledge that I DO NOT accept reimbursement from Medicare, Medicaid, Tricare or any other governmental healthcare programs, nor does any practice with which I am affiliated.</fullName>
                    <isActive>false</isActive>
                    <label>I acknowledge that I DO NOT accept reimbursement from Medicare, Medicaid, Tricare or any other governmental healthcare programs, nor does any practice with which I am affiliated.</label>
                </value>
                <value>
                    <fullName>I acknowledge that I DO NOT practice or am affiliated with a practice that is located in CA, NV, VT, DC or work in a facility that files annual cost reports with Medicare and/or Medicaid</fullName>
                    <isActive>false</isActive>
                    <label>I acknowledge that I DO NOT practice or am affiliated with a practice that is located in CA, NV, VT, DC or work in a facility that files annual cost reports with Medicare and/or Medicaid</label>
                </value>
                <value>
                    <fullName>I acknowledge that I DO NOT practice or am affiliated with a practice that is located in MA or VT or work in a facility that files annual cost reports with Medicare and/or Medicaid</fullName>
                </value>
                <value>
                    <fullName>I acknowledge that I DO practice or am affiliated with a practice that is located in MA or VT or work in a facility that files annual cost reports with Medicare and/or Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfiseeMasterID__c</fullName>
        <label>Profisee Master ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provideyour5digitSureSmileAccountn__c</fullName>
        <label>Provide your 5 digit SureSmile Account n</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Readcarefullyandchoosethecorrectst__c</fullName>
        <label>Read carefully and choose the correct st</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>{[A-CUSTOM TAG:GOVERNMENT]}</fullName>
                </value>
                <value>
                    <fullName>I acknowledge that I AM NOT a government official and do not work for any government agency, government run hospital, clinic or university.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCID__c</fullName>
        <label>SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selectallthatapply__c</fullName>
        <label>Select all that apply:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dentsply Sirona KOL</fullName>
                </value>
                <value>
                    <fullName>SureSmile Clinical Advisory Board</fullName>
                </value>
                <value>
                    <fullName>SureSmile Faculty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted</fullName>
                    <isActive>false</isActive>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicated</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SureSmileusertype__c</fullName>
        <label>SureSmile user type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Ortho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidContact__c</fullName>
        <label>Valid Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DS_SupplierForum!1</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!1</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!10</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!10</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!100</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!100</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!101</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!101</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!102</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!102</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!103</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!103</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!104</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!104</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!105</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!105</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!106</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!106</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!107</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!107</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!108</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!108</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!109</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!109</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!11</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!11</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!110</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!110</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!111</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!111</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!112</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!112</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!113</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!113</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!114</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!114</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!115</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!115</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!116</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!116</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!117</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!117</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!118</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!118</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!119</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!119</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!12</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!12</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!120</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!120</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!121</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!121</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!122</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!122</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!123</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!123</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!124</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!124</label>
                </value>
                <value>
                    <fullName>DS_SupplierForum!125</fullName>
                    <isActive>false</isActive>
                    <label>DS_SupplierForum!125</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YourAGDPACEID__c</fullName>
        <label>Your AGD PACE ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attendee Temp Record</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>SFDCID__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_ProcessStatus__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CventEvents__pkg_EventStub__c</columns>
        <columns>CventEvents__pkg_SourceId__c</columns>
        <columns>CventEvents__pkg_ContactStub__c</columns>
        <columns>CventEvents__pkg_AttendeeStub__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusFailed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Status Failed</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusPending</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Status Pending</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusProcessed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>Status Processed</label>
    </listViews>
    <listViews>
        <fullName>TMP_Attendees_with_Profisee_Master_ID</fullName>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>NAME</columns>
        <columns>ProfiseeMasterID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProfiseeMasterID__c</field>
            <operation>equals</operation>
        </filters>
        <label>TMP Attendees with Profisee Master ID</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Attendee Temp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Temp Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>